[package]
name = "cami"
version = "0.0.1"
edition = "2018"

description = "Cache-friendly comparison, binary & sequential search."
categories = ["algorithms", "caching", "data-structures", "no-std", "text-processing"]

authors = ["Peter Kehl <peter.kehl@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cami-rs/cami"

# TODO MSRV

[features]
# Keep features here sorted alphabetically
alloc = []

# Whether to implement Copy (where item types implement it, too). Intentionally NOT a default
# feature, as it's not a common expectation for larger types.
copy = []

# Whether to implement Debug (where item types implement it, too)
debug = []

deref_pure = ["unsafe", "nightly"]

# Whether to implement Hash (where item types implement it, too)
hash = []

hint_assert_unchecked = ["unsafe"]
nightly = []

default = ["std", "transmute", "deref_pure", "debug", "hash"]
#default = []

# TODO See if this comment shows up at docs.rs.
std = ["alloc"]

# TODO consider renaming to 
transmute = ["unsafe"]
unsafe = []

[dependencies]
cami-helpers = { path = "../cami-helpers", version = "0.0.1" }
serde = { version = "1.0", optional = true, features=['derive'] }

[dev-dependencies]
# @TODO real_blackbox is on NIGHTLY only - do this depending on rustc channel?
# criterion = { version = "0.5.1", features=['real_blackbox'] }
criterion = { version = "0.5.1" }

fastrand = { version = "2.0.2"}

# For benches:
# ref-cast = "1.0"

[[bench]]
name = "vec_string"
harness = false
required-features = ["std"]

[[bench]]
name = "vec_u8"
harness = false
required-features = ["std"]

[[bench]]
name = "vec_u8slice"
harness = false
required-features = ["std"]

[[bench]]
name = "shared"
harness = false

[lints.rust]
#warnings = "allow"
