[package]
name = "cami"
version = "0.0.1"
edition = "2018"

description = "Cache-friendly comparison, binary & sequential search."
categories = ["algorithms", "caching", "data-structures", "no-std", "text-processing"]

authors = ["Peter Kehl <peter.kehl@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cami-rs/cami"

# TODO MSRV
# ---------------

[features]
# Keep features here sorted alphabetically
alloc = []

# Whether to implement Debug (where item types implement it, too)
debug = []

deref_pure = ["unsafe", "nightly"]

# Whether to implement Hash (where item types implement it, too)
hash = []

hint_assert_unchecked = ["unsafe"]
nightly = []

# Empty: no default features.
#
# Because of https://doc.rust-lang.org/nightly/cargo/reference/features.html#dependency-features >
# "If another dependency includes flate2 without specifying default-features = false, then the
# default features will be enabled."
#
default = []

# TODO See if this comment shows up at docs.rs.
std = ["alloc"]

# TODO consider renaming to "casts"
transmute = ["unsafe"]
unsafe = []

adapt-smartstring = ["dep:smartstring"]
# -------------

[dependencies]
cami-helpers = { path = "../cami-helpers", version = "0.0.1" }
serde = { version = "1.0", optional = true, features=['derive'] }

# adapt-* optional dependencies:
#
smartstring = { version = "1.0.*", optional = true, default-features = false }

# ------------

[lints.rust]
warnings = "allow"
